# quikvm

./: CMakeLists.txt  COPYING  Readme.md
assembler/: assembler.cpp  assembler.hh  loader.cpp  loader.hh  main.cpp  parser.cpp  parser.hh  writer.cpp  writer.hh
common/: bytecode.hh
libbackend/: math.c  math.h  program.c  program.h  str.c  str.h  vars.c  vars.h
libbackend/test/: test1.c  test2.c
libvm/: loader.cpp  reader.cpp  reader.hh  vm.cpp  vm.hh
stdlib/: io.c  str.c  test.c
test/: cmp1.asm  cmp2.asm  cmp3.asm  first.asm  flt_math.asm  func.asm  int_array.asm  int_array2.asm  int_math.asm  label1.asm  loop2.asm  menu.asm  start1.asm  test_lib.asm  test_lib_str.asm  thread1.asm
test/arrays/: int_array2.asm  int_array3.asm  int_array4.asm
test/cmp/: cmp1.asm  cmp2.asm  cmp3.asm
test/error/: bad_instr.asm
test/exlib/: lib_io1.asm  lib_str1.asm  lib_str2.asm  lib_str3.asm  test_lib.asm  test_lib_str.asm
test/flt/: double_var1.asm
test/funcs/: func1.asm  main1.asm
test/input/: input1.asm
test/int/: int_var1.asm
test/loops/: loop1.asm
vm/: disassembler.cpp  disassembler.hh  loader.cpp  loader.hh  main.cpp  reader.cpp  reader.hh  types.hh  vm.cpp  vm.hh
